[package]
name = "nas-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.15", features = ["macros"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_repr = "0.1.12"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
strum_macros = "0.25"
strum = { version = "0.25", features = ["derive"] }
base64 = "0.21.0"
gray_matter = "0.2.6"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
vercel_runtime = { version = "1.0.2" }
rand = "0.8.5"
url = "2.3.1"
response_derive = { version = "0.1.0", path = "response_derive" }
dotfiles-schema = { git = "https://github.com/mnpqraven/dotfiles-install" }
csv = "1.2.1"
chrono = { version = "0.4.24", features = ["serde"] }
semver = { version = "1.0.17", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["json"] }
schemars = { version = "0.8.12", features = ["chrono"] }
serde-aux = "4.2.0"
anyhow = { version = "1.0.71", features = ["backtrace"] }
serde_with = "3.0.0"
regex = "1.8.4"

[[bin]]
name = "nas-ws"
path = "src-rust/bin.rs"

[[bin]]
name = "codegen"
path = "src-rust/codegen.rs"

[lib]
path = "src-rust/lib.rs"

[[bin]]
name = "characters_db"
path = "api/cron/characters_db.rs"
[[bin]]
name = "write_characters_db"
path = "api/cron/write_characters_db.rs"
[[bin]]
name = "install_schema"
path = "api/dotfiles/install_schema.rs"
[[bin]]
name = "gacha_banner_list"
path = "api/honkai/gacha_banner_list.rs"
[[bin]]
name = "jade_estimate"
path = "api/honkai/jade_estimate.rs"
[[bin]]
name = "list_future_patch_banner"
path = "api/honkai/list_future_patch_banner.rs"
[[bin]]
name = "list_future_patch_date"
path = "api/honkai/list_future_patch_date.rs"
[[bin]]
name = "probability_rate"
path = "api/honkai/probability_rate.rs"
[[bin]]
name = "parse_mdx"
path = "api/utils/parse_mdx.rs"

[[bin]]
name = "json_writer"
path = "src-rust/json_writer.rs"
