[package]
name = "nas-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.15", features = ["macros"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_repr = "0.1.12"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
strum_macros = "0.25"
strum = { version = "0.25", features = ["derive"] }
base64 = "0.21.0"
gray_matter = "0.2.6"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
vercel_runtime = { version = "1.0.2" }
rand = "0.8.5"
url = "2.3.1"
response_derive = { version = "0.1.0", path = "response_derive" }
dotfiles-schema = { git = "https://github.com/mnpqraven/dotfiles-install" }
csv = "1.2.1"
chrono = { version = "0.4.24", features = ["serde"] }
semver = { version = "1.0.17", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["json"] }
schemars = { version = "0.8.12", features = ["chrono"] }
serde-aux = "4.2.0"
anyhow = { version = "1.0.71", features = ["backtrace"] }
serde_with = "3.0.0"
regex = "1.8.4"
async-trait = "0.1.68"
fake = { version = "2.6.1", features = ["derive"] }

[[bin]]
name = "nas-ws"
path = "src-rust/bin.rs"

[[bin]]
name = "codegen"
path = "src-rust/codegen.rs"

[lib]
path = "src-rust/lib.rs"

[[bin]]
name = "write_db"
path = "api/cron/write_db.rs"
# [[bin]]
# name = "install_schema"
# path = "api/dotfiles/install_schema.rs"
[[bin]]
name = "warp_banners"
path = "api/honkai/warp_banners.rs"
[[bin]]
name = "jade_estimate"
path = "api/honkai/jade_estimate.rs"
[[bin]]
name = "patch_banners"
path = "api/honkai/patch_banners.rs"
[[bin]]
name = "patch_dates"
path = "api/honkai/patch_dates.rs"
[[bin]]
name = "probability_rate"
path = "api/honkai/probability_rate.rs"
[[bin]]
name = "_id1_"
path = "api/honkai/mhy/character/[id1].rs"
[[bin]]
name = "_id2_"
path = "api/honkai/mhy/trace/[id2].rs"
[[bin]]
name = "_id3_"
path = "api/honkai/mhy/eidolon/[id3].rs"
[[bin]]
name = "_id4_"
path = "api/honkai/mhy/skill/[id4].rs"
[[bin]]
name = "attribute_property_list"
path = "api/honkai/mhy/attribute_property_list.rs"
# [[bin]]
# name = "parse_mdx"
# path = "api/utils/parse_mdx.rs"

[[bin]]
name = "json_writer"
path = "src-rust/json_writer.rs"
